[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/GUI/GameTheme.tres" type="Theme" id=1]
[ext_resource path="res://src/GUI/DebugDifficultyGUI.gd" type="Script" id=2]

[node name="DebugDifficultyGUI" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultyLevel" type="Label" parent="."]
margin_right = 174.0
margin_bottom = 30.0
text = "Level:"

[node name="SpeedMultiplier" type="Label" parent="."]
margin_top = 34.0
margin_right = 174.0
margin_bottom = 64.0
text = "Speed Multiplier:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnMultiplier" type="Label" parent="."]
margin_top = 68.0
margin_right = 174.0
margin_bottom = 98.0
text = "Spawn Multiplier:"
